# tesscube

./: .buildinfo  .gitignore  Contact.html  GetInvolved.html  LICENSE  Makefile  Quickstart.html  README.md  README.rst  apidoc.html  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: Contact.doctree  GetInvolved.doctree  Quickstart.doctree  apidoc.doctree  index.doctree
.doctrees/tutorials/: tutorial1.doctree
.github/workflows/: black.yml  documentation.yml  flake8.yml  python-app.yml  tests.yml
_modules/: index.html
_modules/tesscube/: cube.html  query.html  utils.html
docs/: apidoc.rst  conf.py  index.rst
docs/tutorials/: tutorial1.ipynb
src/tesscube/: __init__.py  config.py  cube.py  fits.py  query.py  utils.py  wcs.py
src/tessrip/: __init__.py  config.py  fits.py  query.py  utils.py
tests/: ExploreTPFs.ipynb  Untitled.ipynb  Untitled1.ipynb  test_cube.py  test_query.py  test_utils.py
tutorials/: tutorial1.html  tutorial1.ipynb
