[tool.poetry]
name = "tesscube"
version = "1.0.1dev"
description = ""
authors = ["TESS Science Support Center <tesshelp@bigbang.gsfc.nasa.gov>", "Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "tesscube", from = "src"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.1"
fitsio = "^1.2.1"
aiohttp = "^3.8.6"
asyncio = "^3.4.3"
aiobotocore = "^2.7.0"
rich = "^13.7.0"
astropy = "^5.3.4"
nest-asyncio = "^1.5.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
matplotlib = "^3.8.1"
nest-asyncio = "^1.5.8"
pytest = "^7.4.3"
fbpca = "^1.0"
scipy = "^1.11.3"
tqdm = "^4.66.1"
ipywidgets = "^8.1.2"
astrocut = "^0.11.0"
lksearch = "^1.0.0"
nbsphinx = "^0.9.3"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
sphinx_astropy = "^1.9.1"
sphinx_automodapi = "^0.17.0"
pydata-sphinx-theme = "^0.15.4"
ruff = "^0.5.2"
line-profiler = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
